--- a/encriptador/index.html
+++ b/encriptador/index.html
@@ -17,7 +17,7 @@
         </header>
         <main>
             <section class="input-section">
-                <textarea id="inputText" placeholder="Ingrese el texto aquí"></textarea>
+                <textarea id="inputText" placeholder="Ingrese el texto que desea encriptar"></textarea>
                 <div class="buttons">
                     <button onclick="encryptText()">Encriptar</button>
                     <button onclick="decryptText()">Desencriptar</button>
@@ -26,13 +26,13 @@
             </section>
             <section class="output-section">
                 <div class="output-header">Ningún mensaje fue encontrado</div>
-                <textarea id="outputText" placeholder="Ingrese el texto que desea encriptar o desencriptar"></textarea>
+                <textarea id="outputText" placeholder="Ingrese el texto que desea desencriptar"></textarea>
             </section>
         </main>
-        <footer>
-            Creado por Carlos Esquivel
-        </footer>
     </div>
+    <footer>
+        Creado por Carlos Esquivel
+    </footer>
     <script src="scripts.js"></script>
 </body>
 </html>
